Started fleshing out the framework for Service API boilerplate